Fix overflow page issues (#810)
* updated icon link

* fixed overflow menu issues

* updated icon repo link

--- a/src/assets/styles/partials/_images.scss
+++ b/src/assets/styles/partials/_images.scss
@@ -52,7 +52,7 @@
 }
 
 .small-img {
-  max-width: 30rem;
+  max-width: 25rem;
 
   img {
     width: 100%;
